<?xml version="1.0"?>
<package format="3">
  <name>se3_hopf</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble SE(3) Hopf controller node for PX4 offboard control</description>

  <maintainer email="2085488186@qq.com">tfly</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>

  <build_depend>eigen</build_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
